<?xml version="1.0" encoding="utf-8"?>
<!-- Menu popup penonton -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_slideshow"
        android:checkable="true"
        android:title="@string/slideshow_toggle" />
    <item
        android:id="@+id/action_edit"
        android:title="@string/action_edit" />
    <item
        android:id="@+id/action_share"
        android:title="@string/action_share" />
    <item
        android:id="@+id/action_wallpaper"
        android:title="@string/action_wallpaper" />
    <item
        android:id="@+id/action_contact"
        android:title="@string/action_contact" />
    <item
        android:id="@+id/action_export"
        android:title="@string/action_export" />
    <item
        android:id="@+id/action_info"
        android:title="@string/viewer_info_title" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/action_trash" />
</menu>
